# ros-noetic-learning

./: .clang-format  .gitignore  README.md
src/communication/: CMakeLists.txt  package.xml
src/communication/include/: robot.h
src/communication/src/: main.cc
src/communication/src/robot/: robot.cc  robot_running.cc
src/intelligent/: CMakeLists.txt  package.xml
src/intelligent/include/: intelligent.h
src/intelligent/src/: intelligent.cc  main.cc
src/intelligent/src/learning/: learning_listener.cc  learning_running.cc  learning_talker.cc
src/launcher/: CMakeLists.txt  package.xml
src/launcher/launch/: communication_robot.launch  intelligent.launch
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: RobotInfo.msg
