<?xml version="1.0"?>
<package format="2">
  <name>intelligent</name>
  <version>0.0.0</version>
  <description>The intelligent package</description>

  <author email="yogaprastyobayu@gmail.com">Yoga Prastyo Bayu Laksono</author>
  <maintainer email="yogaprastyobayu@gmail.com">Yoga Prastyo Bayu Laksono</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
